# multi-sensor_calibration_evaluation

./: README.md  README_PAPER.md
camera2camera/: Pic.sh  README.md  calib.sh
camera2camera/src/: dataset1_camera1_order.txt  dataset2_camera1_order.txt  dataset3_camera1_order.txt  joint_camera_calibration_tmp.py  picture_distance.py  picture_reproject.py  picture_sub.py  picture_theta.py  seek_frame.py  seek_frame_datasets3.py  test.py
camera_dist/: README.md  calculate.sh  evaluate_dist.sh
camera_dist/src/: calibrate_helper.py  evaluate_all_distortion.py  evaluate_col_distortion.py  evaluate_col_distortion_whole.py  evaluate_row_col_distortion.py  evaluate_row_distortion.py  evaluate_row_distortion_whole.py  (+5 more)
lidar2camera/: README.md  picture_res.sh
lidar2camera/Calculate_Points/show/: CMakeLists.txt  singershow.cpp
lidar2lidar/: Evaluate.sh  ICP_Move_Data.sh  ICP_Pic.sh  ICP_Show_cloud.sh  ICP_Start.sh  NDT_Move_Data.sh  NDT_Pic.sh  NDT_Show_cloud.sh  NDT_Start.sh  README.md
lidar2lidar/Method/ICP_Space/: CMakeLists.txt  icp.cpp
lidar2lidar/Method/ICP_Space/data/: room_scan02.pcd  room_scan1.pcd  room_scan21.pcd
lidar2lidar/Method/ICP_Space/transformed_data/: room_scan01.pcd  room_scan02_transformed.pcd  room_scan11.pcd  room_scan2_transformed_10.pcd  room_scan2_transformed_30.pcd  room_scan2_transformed_50.pcd
lidar2lidar/Method/NDT_Space/: CMakeLists.txt  ndt.cpp
lidar2lidar/Method/NDT_Space/show/: show.cpp
lidar2lidar/Method/NDT_Space/transformed_data/: room_scan2_transformed.pcd  room_scan2_transformed_10.pcd  room_scan2_transformed_20.pcd  room_scan2_transformed_50.pcd
lidar2lidar/View_Cloud/show/: CMakeLists.txt  show.cpp
(+432 files in other folders)
